# Utilities

./: CMakeLists.txt  README.md
include/: utilities_global.h
include/qyamlcpp/: CMakeLists.txt
include/utilities/: characters.h  filedownloader.h  keymap.h  stringutil.h  tinyxmldocument.h
src/circularbuffer/: CircularBuffer.cpp
src/utilities/: filedownloader.cpp  keymap.cpp  stringutil.cpp  tinyxml2.cpp
src/utilities/tidy-html5/: access.c  access.h  alloc.c  attrdict.c  attrdict.h  attrs.c  attrs.h  buffio.c  buffio.h  charsets.c  charsets.h  clean.c  clean.h  config.c  config.h  entities.c  entities.h  fileio.c  fileio.h  forward.h  gdoc.c  gdoc.h  istack.c  language.c  language.h  language_de.h  language_en.h  language_en_gb.h  language_es.h  language_es_mx.h  language_fr.h  language_pt_br.h  language_zh_cn.h  lexer.c  lexer.h  mappedio.c  mappedio.h  message.c  message.h  messageobj.c  (+24 more)
